Revert "- change memory check to megabytes to more accurate - support smaller instances for testing"
This reverts commit b9b04d918c39a726e8b3098ecb55a39db6636733.