@@ -88,13 +88,10 @@ logstash-plugin update
 # ********* Setting LS_JAVA_OPTS ***************
 if [[ -z "$LS_JAVA_OPTS" ]]; then
   while true; do
-    LS_MEMORY=$(awk '/MemAvailable/{printf "%.f", $2/1024}' /proc/meminfo)
-    if [ $LS_MEMORY -ge 900 -a $AVAILABLE_MEMORY -le 1000 ]; then
-      LS_MEMORY="900"
+    LS_MEMORY=$(awk '/MemAvailable/{printf "%.f", $2/1024/4}' /proc/meminfo)
+    if [ $LS_MEMORY -gt 916 -a $AVAILABLE_MEMORY -le 2000 ]; then
+      LS_MEMORY="1000"
       export LS_JAVA_OPTS="-Xms${LS_MEMORY}m -Xmx${LS_MEMORY}m -XX:-UseConcMarkSweepGC -XX:-UseCMSInitiatingOccupancyOnly -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75"
-    elif [ $LS_MEMORY -ge 1001 -a $AVAILABLE_MEMORY -le 2000 ]; then
-     LS_MEMORY="1000"
-     export LS_JAVA_OPTS="-Xms${LS_MEMORY}m -Xmx${LS_MEMORY}m -XX:-UseConcMarkSweepGC -XX:-UseCMSInitiatingOccupancyOnly -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75"
     elif [ $LS_MEMORY -gt 2000 ]; then
      export LS_JAVA_OPTS="-Xms${LS_MEMORY}m -Xmx${LS_MEMORY}m -XX:-UseConcMarkSweepGC -XX:-UseCMSInitiatingOccupancyOnly -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75"
     else
